force-app/main/default/objects/Ciclo__c/Ciclo__c.object-meta.xml
<CustomObject>
    <label>Ciclo</label>
    <nameField>
        <label>Nombre de Ciclo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ciclos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>