force-app/main/default/objects/Ciclo__c/fields/Actualizar__c.field-meta.xml
<CustomField>
    <fullName>Actualizar__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sirve para hacer un ultimo calculo a los ciclos que ya cerraron</description>
    <label>Actualizar</label>
    <type>Checkbox</type>
</CustomField>