force-app/main/default/objects/Ciclo__c/fields/Cantidad_de_dias_en_el_mes__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_dias_en_el_mes__c</fullName>
    <formula>(Fecha_de_fin__c - Fecha_de_inicio__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad de días en el mes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>