force-app/main/default/objects/Ciclo__c/fields/Cantidad_de_dias_habiles__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_dias_habiles__c</fullName>
    <label>Cantidad de días hábiles</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>