force-app/main/default/objects/Ciclo__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ciclos</relationshipLabel>
    <relationshipName>Ciclos</relationshipName>
    <type>Lookup</type>
</CustomField>