force-app/main/default/objects/Ciclo__c/fields/D_as_feriados__c.field-meta.xml
<CustomField>
    <fullName>D_as_feriados__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Días feriados</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>