force-app/main/default/objects/Ciclo__c/fields/Dias__c.field-meta.xml
<CustomField>
    <fullName>Dias__c</fullName>
    <formula>CASE( MOD(TODAY()  - DATE(1900, 1, 7), 7), 0, &quot;Domingo&quot;, 1, &quot;Lunes&quot;, 2, &quot;Martes&quot;, 3,
&quot;Miercoles&quot;, 4, &quot;Jueves&quot;, 5, &quot;Viernes&quot;, 6, &quot;Sabado&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dia actual</label>
    <type>Text</type>
</CustomField>