force-app/main/default/objects/Ciclo__c/fields/Dias_de_campo_efectivo_transcurridos__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_campo_efectivo_transcurridos__c</fullName>
    <label>Dias de campo efectivo transcurridos</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>