force-app/main/default/objects/Ciclo__c/fields/Equipo__c.field-meta.xml
<CustomField>
    <fullName>Equipo__c</fullName>
    <formula>IF( Owner:User.Contact.Account.Name = &quot;APM Adultos&quot;, &quot;Adultos&quot;,  IF(Owner:User.Contact.Account.Name = &quot;APM Pediatrico&quot;, &quot;Pediátrico&quot;,  IF(Owner:User.Contact.Account.Name = &quot;APM Obras Sociales&quot;, &quot;Obras Sociales&quot;,  IF(Owner:User.Contact.Account.Name = &quot;Negocio Total&quot;, &quot;Negocio Total&quot;, &quot;&quot;) ) )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipo</label>
    <type>Text</type>
</CustomField>