force-app/main/default/objects/Ciclo__c/fields/Equipo_de_APM__c.field-meta.xml
<CustomField>
    <fullName>Equipo_de_APM__c</fullName>
    <label>Equipo de APM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>