force-app/main/default/objects/Ciclo__c/fields/Fecha_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_fin__c</fullName>
    <defaultValue>IF(
  MONTH(TODAY()) = 12,
  DATE( YEAR( TODAY()), 12, 31 ),
  DATE( YEAR( TODAY()), MONTH ( TODAY() ) + 1, 1 ) - 1 
)</defaultValue>
    <label>Fecha de fin</label>
    <type>Date</type>
</CustomField>