force-app/main/default/objects/Ciclo__c/fields/Fecha_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio__c</fullName>
    <defaultValue>TODAY()-DAY(TODAY())+1</defaultValue>
    <label>Fecha de inicio</label>
    <type>Date</type>
</CustomField>