force-app/main/default/objects/Ciclo__c/fields/Generado_por_usuario__c.field-meta.xml
<CustomField>
    <fullName>Generado_por_usuario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generado por usuario</label>
    <type>Checkbox</type>
</CustomField>