force-app/main/default/objects/Ciclo__c/fields/Objetivo_ponderado__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_ponderado__c</fullName>
    <description>Relativo a la cantidad de dias de campo transcurridos</description>
    <formula>Dias_de_campo_efectivo__c * Target_Diario_editable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objetivo ponderado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>