force-app/main/default/objects/Ciclo__c/fields/Promedio__c.field-meta.xml
<CustomField>
    <fullName>Promedio__c</fullName>
    <formula>Visitas_totales_realizadas__c / Dias_de_campo_efectivo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promedio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>