force-app/main/default/objects/Ciclo__c/fields/Reloj_actual__c.field-meta.xml
<CustomField>
    <fullName>Reloj_actual__c</fullName>
    <formula>IF(Visitas_totales_realizadas__c  &lt;&gt; 0, ( Visitas_totales_realizadas__c) / ( Target_Diario_editable__c * Cantidad_de_dias_habiles__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reloj Teórico</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>