force-app/main/default/objects/Ciclo__c/fields/Reloj_real__c.field-meta.xml
<CustomField>
    <fullName>Reloj_real__c</fullName>
    <formula>IF(Visitas_totales_realizadas__c &lt;&gt; 0,( Visitas_totales_realizadas__c ) / ( Target_Diario_editable__c *  Dias_de_campo_efectivo__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reloj real</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>