force-app/main/default/objects/Ciclo__c/fields/Target_diario__c.field-meta.xml
<CustomField>
    <fullName>Target_diario__c</fullName>
    <formula>Owner:User.Contact.Account.Target_de_visitas_diarias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target diario</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>