force-app/main/default/objects/Ciclo__c/fields/Target_Diario_editable__c.field-meta.xml
<CustomField>
    <fullName>Target_Diario_editable__c</fullName>
    <label>Target Diario</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>