force-app/main/default/objects/Ciclo__c/fields/Total_de_visitas_realizadas__c.field-meta.xml
<CustomField>
    <fullName>Total_de_visitas_realizadas__c</fullName>
    <formula>(Visitas_virtuales_realizadas__c * 1) +
(Visitas_presenciales_realizadas__c * 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de visitas realizadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>