force-app/main/default/objects/Ciclo__c/fields/Total_de_visitas_realizadas_Al_100_y_50__c.field-meta.xml
<CustomField>
    <fullName>Total_de_visitas_realizadas_Al_100_y_50__c</fullName>
    <formula>Visitas_totales_realizadas__c + Visitas_APM_y_especialista__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de visitas realizadas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>