force-app/main/default/objects/Ciclo__c/fields/Total_dias_de_licencia__c.field-meta.xml
<CustomField>
    <fullName>Total_dias_de_licencia__c</fullName>
    <label>Total días de licencia</label>
    <summarizedField>Licencia__c.Dia_decimal__c</summarizedField>
    <summaryFilterItems>
        <field>Licencia__c.Aprobado__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Licencia__c.Fecha_de_inicio__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Licencia__c.Ciclo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>