force-app/main/default/objects/Ciclo__c/fields/Visitas_APM_y_especialista__c.field-meta.xml
<CustomField>
    <fullName>Visitas_APM_y_especialista__c</fullName>
    <formula>Visitas_totales_realizadas_APM_adulto__c /2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visitas APM y especialista</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>