force-app/main/default/objects/Ciclo__c/fields/Visitas_drogueria_virtuales__c.field-meta.xml
<CustomField>
    <fullName>Visitas_drogueria_virtuales__c</fullName>
    <label>Visitas droguería virtuales</label>
    <summaryFilterItems>
        <field>Interaccion__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Visita médica</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Interaccion__c.Tipo_de_visita__c</field>
        <operation>equals</operation>
        <value>Virtual</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Interaccion__c.Es_visita_a_drogueria__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Interaccion__c.Ciclo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>