force-app/main/default/objects/Ciclo__c/fields/Visitas_presenciales_realizadas__c.field-meta.xml
<CustomField>
    <fullName>Visitas_presenciales_realizadas__c</fullName>
    <description>No se toman en cuenta las visitas a droguerías.</description>
    <inlineHelpText>Cantidad de visitas realizadas por el Visitador sin tomar en cuenta las que se le hicieron a Compradores de droguería.</inlineHelpText>
    <label>Visitas presenciales realizadas</label>
    <summaryFilterItems>
        <field>Interaccion__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Visita médica</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Interaccion__c.Tipo_de_visita__c</field>
        <operation>equals</operation>
        <value>Presencial</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Interaccion__c.Es_visita_a_drogueria__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Interaccion__c.Ciclo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>