force-app/main/default/objects/Ciclo__c/fields/Visitas_telefonicas_realizadas__c.field-meta.xml
<CustomField>
    <fullName>Visitas_telefonicas_realizadas__c</fullName>
    <description>Sin tomar en cuenta las visitas a droguería.</description>
    <label>Visitas telefónicas realizadas</label>
    <summaryFilterItems>
        <field>Interaccion__c.Tipo_de_visita__c</field>
        <operation>equals</operation>
        <value>Telefónica</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Interaccion__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Visita médica</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Interaccion__c.Es_visita_a_drogueria__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Interaccion__c.Ciclo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>