force-app/main/default/objects/Ciclo__c/fields/Visitas_totales_realizadas_APM_adulto__c.field-meta.xml
<CustomField>
    <fullName>Visitas_totales_realizadas_APM_adulto__c</fullName>
    <label>Visitas totales al 50</label>
    <summaryFilterItems>
        <field>Interaccion__c.EsApmAdulto__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>Interaccion__c.Ciclo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>