force-app/main/default/objects/Ciclo__c/fields/Visitas_totales_realizadas_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>Visitas_totales_realizadas_TOTAL__c</fullName>
    <label>Visitas totales realizadas</label>
    <summaryFilterItems>
        <field>Interaccion__c.EsApmAdulto__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Interaccion__c.Ciclo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>