force-app/main/default/objects/Ciclo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fecha_de_inicio__c</columns>
    <columns>Fecha_de_fin__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>